Retail documentation rework including containerized retail (#2090)
* Add containerized retail workflow

* Remove boot prefix from dhcp example

* Rework retail setup guide

- cover only generic details in setup guide

* Make individual network arch more visible

* Add example how to setup retail with shared network

* Add example configuration using just formulas

* Add example using retail scripts

* Add examples overview page

* List new pages in retail overview

* Containerized clarifications

* Fixes from unit tests

- apparently no comments and ifeval need emptry line before
- fix wrong xref

* Fixes based on PR review

* Add some explanations to example nav page

* Fixes based on PR review and some clearing

- removed DHCP example as it is already in generic section
- removed note about kernel options as it was not correct

* Add changelog for retail changes

* Update Saltboot image and review fixes

* Cover both proxies with dhcp example

* Add steps to containerized retail setup

* Apply suggestions from code review

Co-authored-by: Karl Eichwalder <ke@suse.de>

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -9,8 +9,10 @@ endif::[]
 
 * xref:retail-overview.adoc[Retail Guide]
 ** xref:retail-components.adoc[Retail Components]
+** xref:retail-requirements.adoc[Retail Requirements]
+** xref:retail-network-arch.adoc[Network Architecture]
+
 ** xref:retail-install.adoc[Retail Installation]
-*** xref:retail-requirements.adoc[Retail Requirements]
 
 ifeval::[{suma-content} == true]
 *** xref:retail-install-unified.adoc[Install with the {unifiedinstaller}]
@@ -21,8 +23,8 @@ ifeval::[{uyuni-content} == true]
 *** xref:retail-uyuni-server-setup.adoc[Uyuni Retail Server Setup]
 *** xref:retail-uyuni-branchserver.adoc[Uyuni Retail Branch Server]
 endif::[]
-*** xref:retail-network-arch.adoc[Network Architecture]
 *** xref:retail-install-setup.adoc[Set Up Retail Environment]
+
 ** xref:retail-deploy-section.adoc[Deploying Terminals]
 *** xref:retail-deploy-terminals.adoc[Terminal Deployment Basics]
 *** xref:retail-deploy-terminals-other.adoc[USB and Wireless Deployments]
@@ -31,12 +33,15 @@ endif::[]
 *** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
+
 ** xref:retail-formulas-intro.adoc[Retail Formulas]
+
 ** xref:retail-admin.adoc[Administration]
 *** xref:retail-mass-config.adoc[Mass Configuration]
 *** xref:retail-mass-config-yaml.adoc[Mass Configuration YAML Example]
 *** xref:retail-delta-images.adoc[Delta Images]
 *** xref:retail-admin-network.adoc[Network Administration]
+
 ** xref:retail-migration-intro.adoc[Retail Migration]
 
 ifeval::[{suma-content} == true]
@@ -44,6 +49,13 @@ ifeval::[{suma-content} == true]
 *** xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]
 endif::[]
 *** xref:retail-upgrade-branchserver.adoc[Upgrade Branch Server]
+
+** xref:example-configurations.adoc[Example configurations]
+*** xref:dedicated-with-formulas.adoc[Dedicated terminal network configured using formulas]
+*** xref:dedicated-with-scripts.adoc[Dedicated terminal network configured using scripts]
+*** xref:shared-central-dns.adoc[Shared network with centralized DNS]
+*** xref:containerized-saltboot.adoc[Retail Environment using Containerized Proxy]
+
 ** xref:retail-next.adoc[What Next?]
 
 ifdef::backend-pdf[]
