--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -161,3 +161,36 @@ Automatic creation of a bootstrap repository might fail if you are using custom 
 In this case, you need to create the repository manually.
 
 For more information about custom channels, see xref:administration:custom-channels.adoc[].
+
+
+
+////
+// https://bugzilla.suse.com/show_bug.cgi?id=1207809
+// https://github.com/SUSE/spacewalk/issues/20464
+// We can either add it here or to all "Register Clients" sections in
+// the clients-xxx.adoc files
+
+When creating the bootstrap repo for SUSE-LibertyLinux9-x86_64 the only file that is added is the salt bundle:
+
+Creating bootstrap repo for SUSE-LibertyLinux9-x86_64
+copy 'venv-salt-minion-3004-1.3.3.x86_64'
+Directory walk started
+Directory walk done - 1 packages
+Temporary output repo path: /srv/www/htdocs/pub/repositories/res/9/bootstrap.tmp/.repodata/
+Preparing sqlite DBs
+Pool started (with 5 workers)
+Pool finished
+
+This means that customers must use the --force-switch with mgr-bootstrap or modify the bootstrap to use the salt bundle:
+
+# Avoid installing venv-salt-minion instead salt-minion
+# even if it available in the bootstrap repo
+AVOID_VENV_SALT_MINION=0
+
+# Force installing venv-salt-minion instead salt-minion
+# even if it is NOT available in the bootstrap repo
+FORCE_VENV_SALT_MINION=1
+
+Otherwise they will encounter an issue where the salt and salt-minions are not available when they try to bootstrap.
+
+////
