--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -37,10 +37,12 @@ skopeo copy docker://k8s.gcr.io/pause:latest docker://(your_server)/k8s.gcr.io/p
 +
 [NOTE]
 ====
-If you want to copy the images to a registry with SSL, remove the property [literal]`--dest-tls-verify=false`.
+//If you want to copy the images to a registry with SSL, remove the property [literal]`--dest-tls-verify=false`.
+If the registry is not secured, add [literal]``--dest-tls-verify=false``.
 ====
 +
-. To start using the images from the internal registry, adapt the image path at file [literal]`/etc/sysconfig/uyuni-proxy-systemd-services.config`.
+//. To start using the images from the internal registry, adapt the image path at file [literal]`/etc/sysconfig/uyuni-proxy-systemd-services.config`.
+. To start using the images from the internal registry please adapt the [literal]`NAMESPACE` value in file `/etc/sysconfig/uyuni-proxy-systemd-services.config`.
 
 [[air-gapped-solution-for-podman]]
 == Air-gapped solution for Podman
@@ -51,7 +53,20 @@ This example illustrates deployment of containerized image on a machine with no 
 .Procedure: Deploying air-gapped proxy
 [role=procedure]
 
-. Before starting the pod, on a machine with internet access run:
+. Before starting the pod, to locate the pause image run the command:
+//on a machine with internet access run:
++
+----
+echo -e '[engine]\nimfra_image = "(your_server)/pause:latest"'>>/etc/containers/containers.conf
+----
++
+[WARNING]
+====
+
+This command does not work on SLE 15 SP3 and earlier container hosts.
+====
++
+. On a machine with internet access run:
 +
 ----
 for image in httpd salt-broker squid ssh tftpd; do
@@ -73,3 +88,8 @@ podman save -m -o proxy-images.tar \
 ----
 podman load -i proxy-images.tar
 ----
++
+[NOTE]
+====
+For the k3s deployment, add [literal]`--set repository=(your_server)` to the helm install command line.
+====
