--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -29,16 +29,16 @@ done
 skopeo copy docker://k8s.gcr.io/pause:latest docker://(your_server)/k8s.gcr.io/pause:latest
 ----
 +
+[NOTE]
+====
+If the registry is not secured, add [literal]``--dest-tls-verify=false``.
+====
++
 . If the registry is unsecured, i.e. not configured with SSL, add the regitry domain to the section [literal]``registries.insecure`` on the containerized proxy virtual machine by editing:
 +
 ----
 /etc/containers/registries.conf
 ----
-+
-[NOTE]
-====
-If the registry is not secured, add [literal]``--dest-tls-verify=false``.
-====
 +
 . To start using the images from the internal registry please adapt the [literal]`NAMESPACE` value in file `/etc/sysconfig/uyuni-proxy-systemd-services.config`.
 
@@ -51,10 +51,10 @@ This example illustrates deployment of containerized image on a machine with no 
 .Procedure: Deploying air-gapped proxy
 [role=procedure]
 
-. Before starting the pod, to locate the pause image run the command:
+. Before starting the pod, point the Podman where to get the [literal]`pause` image from on the internal registry:
 +
 ----
-echo -e '[engine]\nimfra_image = "(your_server)/pause:latest"'>>/etc/containers/containers.conf
+echo -e '[engine]\ninfra_image = "(your_server)/pause:latest"'>>/etc/containers/containers.conf
 ----
 +
 [WARNING]
@@ -79,14 +79,14 @@ podman save -m -o proxy-images.tar \
     registry.suse.com/suse/manager/4.3/proxy-tftpd
 ----
 +
+[NOTE]
+====
+For the k3s deployment, add [literal]`--set repository=(your_server)` to the helm install command line.
+====
++
 . Transfer the [literal]`proxy-images.tar` to the air-gapped proxy.
 . To make images available to be started when needed, run the command:
 +
 ----
 podman load -i proxy-images.tar
 ----
-+
-[NOTE]
-====
-For the k3s deployment, add [literal]`--set repository=(your_server)` to the helm install command line.
-====
