--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -64,7 +64,7 @@ Clients using Satellite certificates are not supported with {productname} Server
 ====
 
 
-The entitlement certificates and keys need to be copied from the client system to a location that the {productname} Server can access.
+The entitlement certificates and keys need to be copied from the client system to a location that your web browser can access.
 
 The keys and certificates might have slightly different names to those shown here.
 Your entitlement certificate and the {redhat} CA Certificate file have file extensions of [path]``.crt``.
@@ -73,7 +73,7 @@ The key has a file extension of [path]``.key``.
 
 
 .Procedure: Copying Certificates to the Server
-. Copy your entitlement certificate and key from the client system, to a location that the {productname} Server can access:
+. Copy your entitlement certificate and key from the client system, to your workstation:
 +
 Amazon EC2:
 +
@@ -188,21 +188,21 @@ The products you need for this procedure are:
 .Red Hat Products - WebUI
 |===
 
+// SUSE Liberty Linux not available at Uyuni for now
 | OS Version | Product Name
-| {redhat} 7 | RHEL7 Base x86_64
-// SUSE Liberty Linux not available at Uyuni for now
-
-ifeval::[{suma-content} == true]
-| {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
-| {redhat} 9 | RHEL and Liberty 9 Base
-endif::[]
-
-// SUSE Liberty Linux not available at Uyuni for now
-
 ifeval::[{uyuni-content} == true]
-| {redhat} 8 | RHEL or CentOS 8 Base
 | {redhat} 9 | RHEL
+| {redhat} 8 | RHEL or CentOS 8 Base
 endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+ifeval::[{suma-content} == true]
+| {redhat} 9 | RHEL and Liberty 9 Base
+| {redhat} 8 | RHEL or SLES ES or CentOS 8 Base
+endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+| {redhat} 7 | RHEL7 Base x86_64
 
 |===
 
@@ -226,20 +226,20 @@ The channels you need for this procedure are:
 | Client Channel
 | Tools Channel
 
-| {redhat} 7
-| rhel-x86_64-server-7
+| {redhat} 9
+| el9-pool-x86_64
 | -
-| res7-suse-manager-tools-x86_64
+| el9-manager-tools-pool-x86_64, el9-manager-tools-updates-x86_64
 
 | {redhat} 8
 | rhel8-pool-x86_64
 | -
 | res8-manager-tools-pool-x86_64
 
-| {redhat} 9
-| el9-pool-x86_64
+| {redhat} 7
+| rhel-x86_64-server-7
 | -
-| el9-manager-tools-pool-x86_64, el9-manager-tools-updates-x86_64
+| res7-suse-manager-tools-x86_64
 
 |===
 
@@ -283,14 +283,19 @@ X-RHUI-ID=<value>
 X-RHUI-SIGNATURE=<value>
 ----
 +
-.  Replace [literal]``<channel_label_X>`` above with channel names such as [literal]``rhel8-baseos-repo``:
+. Replace [literal]``<channel_label_X>`` above with the names of the custom channels you are planning to create (see next section):
 +
 ----
 [rhel8-baseos-repo]
 X-RHUI-ID=...
 X-RHUI-SIGNATURE=...
 ----
-
++
+[NOTE]
+====
+{rhel} may renew these headers at any point in time. 
+In such a case, repeat the procedure to get the new HTTP headers in place.
+====
 
 
 == Prepare Custom Repositories and Channels
@@ -339,20 +344,22 @@ The channels you need for this procedure are:
 .Red Hat Custom Channels
 |===
 
+// SUSE Liberty Linux not available at Uyuni for now
 | OS Version | Base Product          | Base Channel
-| {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
-// SUSE Liberty Linux not available at Uyuni for now
-
 ifeval::[{suma-content} == true]
-| {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
 | {redhat} 9 | RHEL and Liberty 9 Base | el9-pool-x86_64
+| {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
 endif::[]
-// SUSE Liberty Linux not available at Uyuni for now
 
+// SUSE Liberty Linux not available at Uyuni for now
 ifeval::[{uyuni-content} == true]
-| {redhat} 8 | RHEL or CentOS 8 Base | rhel8-pool-x86_64
 | {redhat} 9 | RHEL | el9-pool-x86_64
+| {redhat} 8 | RHEL or CentOS 8 Base | rhel8-pool-x86_64
 endif::[]
+
+// SUSE Liberty Linux not available at Uyuni for now
+| {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
+
 |===
 
 
