Fixes and additional instructions.

--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -17,8 +17,13 @@ This example illustrates deployment of {salt} proxies only.
 . Install [literal]``skopeo`` on a machine with access to [literal]``registry.suse.com``:
 +
 ----
-zypper in skopeo (can be {productname} server)
+zypper in skopeo
 ----
++
+[NOTE]
+====
+This can be {productname} server.
+====
 +
 . Copy images between registries:
 +
@@ -31,7 +36,7 @@ skopeo copy docker://k8s.gcr.io/pause:latest docker://(your_server)/k8s.gcr.io/p
 +
 [NOTE]
 ====
-If the registry is not secured, add [literal]``--dest-tls-verify=false``.
+For every [literal]`skopeo` command add [literal]`--dest-tls-verify=false` if the registry is not secured.
 ====
 +
 . If the registry is unsecured, i.e. not configured with SSL, add the regitry domain to the section [literal]``registries.insecure`` on the containerized proxy virtual machine by editing:
@@ -39,6 +44,17 @@ If the registry is not secured, add [literal]``--dest-tls-verify=false``.
 ----
 /etc/containers/registries.conf
 ----
++
+. Before starting the pod, point the Podman where to get the [literal]`pause` image from on the internal registry:
++
+----
+echo -e '[engine]\ninfra_image = "(your_server)/pause:latest"'>>/etc/containers/containers.conf
+----
++
+[NOTE]
+====
+For the k3s deployment, add [literal]`--set repository=(your_server)` to the helm install command line.
+==== 
 +
 . To start using the images from the internal registry please adapt the [literal]`NAMESPACE` value in file `/etc/sysconfig/uyuni-proxy-systemd-services.config`.
 
