--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -22,7 +22,7 @@ zypper in skopeo
 +
 [NOTE]
 ====
-This can be {productname} server.
+This can be {productname} Server.
 ====
 +
 . Copy images between registries:
