--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -39,7 +39,7 @@ skopeo copy docker://k8s.gcr.io/pause:latest docker://(your_server)/k8s.gcr.io/p
 For every [literal]`skopeo` command add [literal]`--dest-tls-verify=false` if the registry is not secured.
 ====
 +
-. If the registry is unsecured, i.e. not configured with SSL, add the regitry domain to the section [literal]``registries.insecure`` on the containerized proxy virtual machine by editing:
+. If the registry is unsecured, for example not configured with SSL, add the registry domain to the section [literal]``registries.insecure`` on the containerized proxy virtual machine by editing:
 +
 ----
 /etc/containers/registries.conf
