--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -68,7 +68,7 @@ This example illustrates deployment of containerized image on a machine with no 
 .Procedure: Deploying air-gapped proxy
 [role=procedure]
 
-. Before starting the pod, point the Podman where to get the [literal]`pause` image from on the internal registry:
+. Before starting the pod, point the Podman where to get the [literal]``pause`` image from on the internal registry:
 +
 ----
 echo -e '[engine]\ninfra_image = "(your_server)/pause:latest"'>>/etc/containers/containers.conf
