--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -98,7 +98,7 @@ podman save -m -o proxy-images.tar \
 +
 [NOTE]
 ====
-For the k3s deployment, add [literal]`--set repository=(your_server)` to the helm install command line.
+For the k3s deployment, add [literal]``--set repository=(your_server)`` to the helm install command line.
 ====
 +
 . Transfer the [literal]`proxy-images.tar` to the air-gapped proxy.
