--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -101,7 +101,7 @@ podman save -m -o proxy-images.tar \
 For the k3s deployment, add [literal]``--set repository=(your_server)`` to the helm install command line.
 ====
 +
-. Transfer the [literal]`proxy-images.tar` to the air-gapped proxy.
+. Transfer the [literal]``proxy-images.tar`` to the air-gapped proxy.
 . To make images available to be started when needed, run the command:
 +
 ----
