--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -92,7 +92,8 @@ podman save -m -o proxy-images.tar \
     k8s.gcr.io/pause \
     registry.suse.com/suse/manager/4.3/proxy-httpd \
     registry.suse.com/suse/manager/4.3/proxy-salt-broker \
-    registry.suse.com/suse/manager/4.3/proxy-squid registry.suse.com/suse/manager/4.3/proxy-ssh \
+    registry.suse.com/suse/manager/4.3/proxy-squid \
+    registry.suse.com/suse/manager/4.3/proxy-ssh \
     registry.suse.com/suse/manager/4.3/proxy-tftpd
 ----
 +
