--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -37,7 +37,7 @@ skopeo copy docker://k8s.gcr.io/pause:latest docker://(your_server)/k8s.gcr.io/p
 +
 [NOTE]
 ====
-For every [literal]`skopeo` command add [literal]`--dest-tls-verify=false` if the registry is not secured.
+For every [literal]``skopeo`` command add [literal]``--dest-tls-verify=false`` if the registry is not secured.
 ====
 +
 . If the registry is unsecured, for example not configured with SSL, add the registry domain to the section [literal]``registries.insecure`` on the containerized proxy virtual machine by editing:
@@ -46,17 +46,17 @@ For every [literal]`skopeo` command add [literal]`--dest-tls-verify=false` if th
 /etc/containers/registries.conf
 ----
 +
-. Before starting the pod, point the Podman where to get the [literal]`pause` image from on the internal registry:
+. Before starting the pod, point the Podman where to get the [literal]``pause`` image from on the internal registry:
 +
 ----
 echo -e '[engine]\ninfra_image = "(your_server)/pause:latest"'>>/etc/containers/containers.conf
 ----
 +
-. To start using the images from the internal registry please adapt the [literal]`NAMESPACE` value in file `/etc/sysconfig/uyuni-proxy-systemd-services.config`.
+. To start using the images from the internal registry please adapt the [literal]``NAMESPACE`` value in file `/etc/sysconfig/uyuni-proxy-systemd-services.config`.
 +
 [NOTE]
 ====
-For the k3s deployment, add [literal]`--set repository=(your_server)` to the helm install command line.
+For the k3s deployment, add [literal]``--set repository=(your_server)`` to the helm install command line.
 ====
 
 
