Formatting fixes, brackets.

--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -30,9 +30,9 @@ This can be {productname} Server.
 +
 ----
 for image in httpd salt-broker squid ssh tftpd; do
-    skopeo copy docker://registry.suse.com/suse/manager/4.3/proxy-$image:latest docker://(your_server)/registry.suse.com/suse/manager/4.3/proxy-$image
+    skopeo copy docker://registry.suse.com/suse/manager/4.3/proxy-$image:latest docker://<your_server>/registry.suse.com/suse/manager/4.3/proxy-$image
 done
-skopeo copy docker://k8s.gcr.io/pause:latest docker://(your_server)/k8s.gcr.io/pause:latest
+skopeo copy docker://k8s.gcr.io/pause:latest docker://<your_server>/k8s.gcr.io/pause:latest
 ----
 +
 [NOTE]
@@ -49,14 +49,14 @@ For every [literal]``skopeo`` command add [literal]``--dest-tls-verify=false`` i
 . Before starting the pod, point the Podman where to get the [literal]``pause`` image from on the internal registry:
 +
 ----
-echo -e '[engine]\ninfra_image = "(your_server)/pause:latest"'>>/etc/containers/containers.conf
+echo -e '[engine]\ninfra_image = "<your_server>/pause:latest"'>>/etc/containers/containers.conf
 ----
 +
 . To start using the images from the internal registry please adapt the [literal]``NAMESPACE`` value in file `/etc/sysconfig/uyuni-proxy-systemd-services.config`.
 +
 [NOTE]
 ====
-For the k3s deployment, add [literal]``--set repository=(your_server)`` to the helm install command line.
+For the k3s deployment, add [literal]``--set repository=<your_server>`` to the helm install command line.
 ====
 
 
@@ -72,7 +72,7 @@ This example illustrates deployment of containerized image on a machine with no 
 . Before starting the pod, point the Podman where to get the [literal]``pause`` image from on the internal registry:
 +
 ----
-echo -e '[engine]\ninfra_image = "(your_server)/pause:latest"'>>/etc/containers/containers.conf
+echo -e '[engine]\ninfra_image = "<your_server>/pause:latest"'>>/etc/containers/containers.conf
 ----
 +
 [WARNING]
@@ -100,7 +100,7 @@ podman save -m -o proxy-images.tar \
 +
 [NOTE]
 ====
-For the k3s deployment, add [literal]``--set repository=(your_server)`` to the helm install command line.
+For the k3s deployment, add [literal]``--set repository=<your_server>`` to the helm install command line.
 ====
 +
 . Transfer the [literal]``proxy-images.tar`` to the air-gapped proxy.
