--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -15,7 +15,7 @@ This example illustrates deployment of {salt} proxies only.
 .Procedure: Deploying {salt} Proxy from an internal image registry
 [role=procedure]
 
-. Install [literal]``skopeo`` on a machine with access to [literal]``registry.suse.com``:
+. On a machine with access to [literal]``registry.suse.com`` install [literal]``skopeo``:
 +
 ----
 zypper in skopeo
